Forge Beta: 0#-##-2014 ver 1.5.21


13### cards in total.


-------------
Release Notes
-------------

- New Magic 2015 cards -
We have added a branch to our SVN for the new cards that are currently being scripted. These cards are not yet available in this build of forge. Please be patient and they will soon become available.


- Conspiracy cards -
Forge now includes many of the new Conspiracy cards. It may take a few days/weeks before these new card pictures become available for downloading via the "Download LQ Card Pictures" button. The LQ set pictures tend to take a few more weeks/months to process before they become available for downloading via the "Download LQ Set Pictures" button. Please be patient. The Forge devs are not involved in maintaining the servers that house these pictures.


---------
New Cards
---------




---------------------------
New Magic 2015 branch Cards
---------------------------

Chasm Skulker
Coral Barrier
Marked for Honor
Meditation Puzzle
Military Intelligence
Paragon of Eternal Wilds
Paragon of Fierce Defiance
Paragon of Gathering Mists
Paragon of New Dawns
Paragon of Open Graves
Quickling
Reclamation Sage
Seraph of the Masses
Soul of Zendikar
Triplicate Spirits
Void Snare
Waste Not
Avarice Amulet
In Garruk's Wake
Xathrid Slyblade
Cruel Sadist
Ob Nixilis, Unshackled
Aggressive Mining
Master of Predicaments
Soul of Innistrad
Sliver Hive
Yisan, the Wanderer Bard
Soul of Theros
Witch's Familiar
Endless Obedience
Ajani Steadfast
Brawler's Plate
Hot Soup
Obelisk of Urd
Perilous Vault
Jace, the Living Guildpact
Soul of Ravnica
Might Makes Right
Miner's Bane
Warden of the Beyond
Hushwing Gryff


------------
Known Issues
------------

- The Mac OS application version -